ChangeLog for ARQ
=================

==== ARQ 2.6

+ Clean internal extensions points for TDB

+ Put misc support code in for TDB

+ Fix bug in SPARQL grammar (!) : expressions like "1+2*3" did not parse.  
  This is a fix to the grammar as published by the working group.  
   It does not invalidate or chnage any query that works - it makes some
   illegal syntax work that should work.

==== ARQ 2.5

+ Redesign of quad support. 
  AlgebraGeneratorQuad retired
  Use Algebra.toQuadForm(Op) to turn an algebra expression into quads.   

+ fn:string-join was misnamed - was actually renamed as fn:concat
  And now takes arbitrary number of arguments

+ Add afn:strjoin(str, string...) 

+ Bug fix: path parsing when "a" (for rdf:type) 
           is used in a property list (using ;) 

+ Bug fix: LET expressions did not eliminate solutions when
    assigned a new, different value.

+ Internal renaming to make the class names better reflect their role
  particularly not using the term "compile" for things now considered
  to happen during query execution.  

+ Internal utilities updated for TDB

+ Signal start/end of updates using the graph-level events mechanism.

==== ARQ 2.4

+ Change to interface for query compilation : Algebra.compile and Algebra.optimize 

+ Property paths added.  See documentation.
  
+ Simplify the interface between ARQ and data sources.
  StageGenerator example updated.   

==== ARQ 2.3

+ HAVING / ORDER BY variable, where variable is SELECT as an aggregate or computed value now works. 
  (current restriction: can't have the expression directly in the ORDER BY - need to project the variable)  

+ Upgrade to Lucene 2.3.1

+ Change return type of ResultFactor.copyResults to ResultSetRewinable (a sub interface of ResultSet).

+ Allow inital bindings for Updates (ignored unless a Modify operation)

+ Added SUM(?x) aggregate

+ Added { SELECT } (nested SELECT) and LET (assignment) to ARQ extended SPARQL.
