@@ -38,6 +38,11 @@ public interface Dataset
     
     /** Get the dataset in graph form */
     public DatasetGraph asDatasetGraph() ; 
+    
+    /** Close the datset, potentially releasing any associated resources.
+     *  The dataset can not be used for query after this call.
+     */
+    public void close() ;
 }
 
 /*
